# grok.poetry-import-clashes

./: README.md
apple/: __main__  a  hack.rpmain  main  pyproject.toml
apple/apple/: __main__.py
banana/: __main__  main  pyproject.toml
banana/banana/: __main__.py  console.py
bee/: main
bee/apple/: console.py
carrot/tests/: test_a.py
